# immersion-cooling-validator

6_immersion-cooling-validator/: Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt
6_immersion-cooling-validator/docs/: PUBLISHING.md
6_immersion-cooling-validator/examples/: basic_validation.py  quickstart.py  session2_features.py
6_immersion-cooling-validator/src/icv/: __init__.py  cli.py  compliance.py  economics.py  electrical.py  fluids.py  lifetime.py  monte_carlo.py  properties.py  report.py  sensitivity.py  thermal.py  validator.py  visualization.py
6_immersion-cooling-validator/tests/: test_api.py  test_icv.py  test_session2.py
6_immersion-cooling-validator/web/: nginx.conf
6_immersion-cooling-validator/web/backend/: main.py  requirements.txt
6_immersion-cooling-validator/web/frontend/: index.html
