[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immersion-cooling-validator"
version = "0.1.0"
description = "Monte Carlo validation framework for immersion cooling fluids against OCP specifications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Bosco Chiramel", email = "bosco8b4824@gmail.com"},
]
keywords = [
    "immersion cooling",
    "data center",
    "thermal management",
    "monte carlo",
    "OCP",
    "Open Compute Project",
    "dielectric fluid",
    "Group III oil",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "plotly>=5.10.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
all = [
    "immersion-cooling-validator[dev,viz,web]",
]

[project.urls]
Homepage = "https://github.com/bosco-chiramel/immersion-cooling-validator"
Documentation = "https://github.com/bosco-chiramel/immersion-cooling-validator#readme"
Repository = "https://github.com/bosco-chiramel/immersion-cooling-validator"
Issues = "https://github.com/bosco-chiramel/immersion-cooling-validator/issues"

[project.scripts]
icv = "icv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
